cabal-version:   3.6
name:            lens-jitsurei
version:         0.1.0.0
license:
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
build-type:      Simple
extra-doc-files: README.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib
  build-depends:
    , base  ^>=4.18.2.1
    , lens
    , generic-lens

  hs-source-dirs:   src
  default-language: GHC2021

test-suite lens-jitsurei-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base           ^>=4.18.2.1
    , lens-jitsurei
